my_salesforce_source/force-app/main/default/objects/Loan_Application__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>