my_salesforce_source/force-app/main/default/objects/Loan_Application__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>Income</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>