my_salesforce_source/force-app/main/default/objects/Loan_Application__c/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>