my_salesforce_source/force-app/main/default/objects/Loan_Application__c/fields/Normalized_Income__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Income__c</fullName>
    <label>Normalized Income</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>